--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,14 @@ dependencies {
     //PARA NAVIGATION COMPONENT
     implementation ('androidx.navigation:navigation-fragment-ktx:2.4.2')
     implementation ('androidx.navigation:navigation-ui-ktx:2.4.2')
+    implementation("androidx.cardview:cardview:1.0.0")
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
