--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     implementation ('androidx.navigation:navigation-fragment-ktx:2.4.2')
     implementation ('androidx.navigation:navigation-ui-ktx:2.4.2')
     implementation("androidx.cardview:cardview:1.0.0")
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
