--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation("androidx.cardview:cardview:1.0.0")
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation 'com.jakewharton.rxbinding:rxbinding:1.0.1'
 
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.6'
 
