--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,11 +34,18 @@ android {
     }
 }
 
+
 dependencies {
     //PARA NAVIGATION COMPONENT
     implementation ('androidx.navigation:navigation-fragment-ktx:2.4.2')
     implementation ('androidx.navigation:navigation-ui-ktx:2.4.2')
     implementation("androidx.cardview:cardview:1.0.0")
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    implementation "com.jakewharton.rxbinding2:rxbinding-kotlin:2.0.0"
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.6'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
