--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,5 +65,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Vision API
-    implementation 'com.google.android.gms:play-services-vision:20.1.3'
+    implementation 'com.google.mlkit:image-labeling:17.0.7'
 }
