--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
-        buildConfigField "String", 'API_URL', '"http://HOST:PORT"'
+        buildConfigField "String", 'API_URL', '"http://192.168.0.68:3000/"'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
