Feature/profile preferences (#42)
* user preference

* profile likes

* profile fragment

* profile fragment

* Preferences and keep session

* Fix mock

* Fix strings

Co-authored-by: Muabid <bruno2698@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.QueComoHoy">
+        <receiver android:name=".notifications.MealRecommendationsNotification"
+            android:enabled="true"/>
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="adjustPan"
